update design for all section

--- a/index.html
+++ b/index.html
@@ -13529,7 +13529,7 @@
   </div>
 
 
-  <div>
+  <div style="padding-bottom: 30px;">
     <div class="row justify-content-center">
       <div class="col-lg-10">
 
@@ -13557,18 +13557,18 @@
               <div>
                 <a href="https://www.facebook.com/login.php?skip_api_login=1&api_key=966242223397117&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fsharer%2Fsharer.php%3Fu%3Dhttps%253A%252F%252Fwww.wust.edu%252Fso%252F1bOQKT_Jj%253FlanguageTag%253Den&cancel_url=https%3A%2F%2Fwww.facebook.com%2Fdialog%2Fclose_window%2F%3Fapp_id%3D966242223397117%26connect%3D0%23_%3D_&display=popup&locale=en_US"
                   target="_blank">
-                  <img src="https://i.ibb.co/f8Q9DS8/fb.png" width="35px" height="35px" loading="lazy" class="img-fluid"
-                    alt="facebook">
+                  <img src="https://i.ibb.co/f8Q9DS8/fb.png" style="width: 35px; height: 35px;" width="35px"
+                    height="35px" loading="lazy" class="img-fluid" alt="facebook">
                 </a>
                 <a href="https://twitter.com/intent/post?url=https%3A%2F%2Fwww.wust.edu%2Fso%2F1bOQKT_Jj%3FlanguageTag%3Den"
                   target="_blank">
-                  <img src="https://i.ibb.co/zJwdrKk/tw.png" width="35px" height="35px" loading="lazy" class="img-fluid"
-                    alt="twitter">
+                  <img src="https://i.ibb.co/zJwdrKk/tw.png" style="width: 35px; height: 35px;" width="35px"
+                    height="35px" loading="lazy" class="img-fluid" alt="twitter">
                 </a>
                 <a href="https://www.pinterest.com/pin-builder/?description=WUST+lauded+at+Virginia+State+Senate%2C+a+memorable+day+for+all&media=https%3A%2F%2Fstatic.wixstatic.com%2Fmedia%2F31a434_3e0bed25cfd3418d897f050f0f29cc2c%7Emv2.jpg&method=button&url=https%3A%2F%2Fwww.wust.edu%2Fso%2F1bOQKT_Jj%3FlanguageTag%3Den"
                   target="_blank">
-                  <img src="https://i.ibb.co/87Jcbsn/pin.png" width="35px" height="35px" loading="lazy"
-                    class="img-fluid" alt="pinterest">
+                  <img src="https://i.ibb.co/87Jcbsn/pin.png" style="width: 35px; height: 35px;" width="35px"
+                    height="35px" loading="lazy" class="img-fluid" alt="pinterest">
                 </a>
 
               </div>
@@ -16995,195 +16995,59 @@
   </div>
 
 
-<div class="wraper-section selectedBgColor" style="padding-top: 10px; padding-bottom: 20px;">
-  <div>
-    <h3 class="common-page-section-heading">Application Process</h3>
-    <p style="
-                                        font-size: 18px;
-                                        line-height: inherit;
-                                        margin-top: 10px;
-                                        color: #656565;
-                                        margin-bottom: 6px;
-                                      ">
-      <span style="color: #2347a7; font-weight: 600">To apply for the Post 9/11 GI Bill®, complete the following steps:</span>
-    </p>
+  <div class="wraper-section selectedBgColor" style="padding-top: 10px; padding-bottom: 40px;">
     <div>
-      <ul style="list-style: decimal-leading-zero;">
-        <li style="
-              margin-top: 10px;
-              font-size: 15px;
-              color: #656565;
-              font-weight: 500;
-            ">
-          <p style="
-        font-size: inherit;
-        line-height: inherit;
-        margin-bottom: 15px;
-        margin-top: 15px;
-        color: #656565;
-        text-align: justify;
-        font-weight: 500;
-      ">
-            Create a <span style="color: #2347a7; font-weight: 600"><a href="https://www.va.gov/?next=loginModal"
-                target="_blank"> VA account</a></span>
-            through ID.me or Login.gov.
-          </p>
-        </li>
-        <li style="
-              margin-top: 10px;
-              font-size: 15px;
-              color: #656565;
-              font-weight: 500;
-            ">
-          <p style="
-        font-size: inherit;
-        line-height: inherit;
-        margin-bottom: 15px;
-        margin-top: 15px;
-        color: #656565;
-        text-align: justify;
-        font-weight: 500;
-      ">
-            Log into your account and complete the appropriate application:
-          </p>
-        </li>
-        <li style="
-              margin-top: 10px;
-              font-size: 15px;
-              color: #656565;
-              font-weight: 500;
-            ">
-          <p style="
-        font-size: inherit;
-        line-height: inherit;
-        margin-bottom: 15px;
-        margin-top: 15px;
-        color: #656565;
-        text-align: justify;
-        font-weight: 500;
-      ">
-            VA Form 22-1990 – If you are applying for VA benefits for the first time.
-          </p>
-        </li>
-        <li style="
-              margin-top: 10px;
-              font-size: 15px;
-              color: #656565;
-              font-weight: 500;
-            ">
-          <p style="
-        font-size: inherit;
-        line-height: inherit;
-        margin-bottom: 15px;
-        margin-top: 15px;
-        color: #656565;
-        text-align: justify;
-        font-weight: 500;
-      ">
-            VA Form 22-1995 – If you have used your benefits at another institution and would like to transfer to
-            Washington University of Science and Technology as your primary institution, or if it has been over a year
-            since your last certification.
-          </p>
-        </li>
-        <li style="
-              margin-top: 10px;
-              font-size: 15px;
-              color: #656565;
-              font-weight: 500;
-            ">
-          <p style="
-        font-size: inherit;
-        line-height: inherit;
-        margin-bottom: 15px;
-        margin-top: 15px;
-        color: #656565;
-        text-align: justify;
-        font-weight: 500;
-      ">
-            VA Form 22–1990E – If you are applying for a Transferred Education Benefit for the first time.
-          </p>
-        </li>
-        <li style="
-              margin-top: 10px;
-              font-size: 15px;
-              color: #656565;
-              font-weight: 500;
-            ">
-          <p style="
-        font-size: inherit;
-        line-height: inherit;
-        margin-bottom: 15px;
-        margin-top: 15px;
-        color: #656565;
-        text-align: justify;
-        font-weight: 500;
-      ">
-            VA Form 22-1995E – If you have used your Transferred Education Benefit at another institution and would like
-            to transfer to Washington University of Science and Technology as your primary institution, or if it has
-            been over a year since your last certification.
-          </p>
-        </li>
-        <li style="
-              margin-top: 10px;
-              font-size: 15px;
-              color: #656565;
-              font-weight: 500;
-            ">
-          <p style="
-        font-size: inherit;
-        line-height: inherit;
-        margin-bottom: 15px;
-        margin-top: 15px;
-        color: #656565;
-        text-align: justify;
-        font-weight: 500;
-      ">
-            Once the application has been submitted, the VA will send you a Certificate of Eligibility. The Certificate
-            of Eligibility is sent via postal mail services and could take up to 8 weeks for receipt.
-          </p>
-        </li>
-      </ul>
+      <h3 class="common-page-section-heading">Virginia State Senate Recognition of WUST</h3>
+      <p style="color: #656565;
+                        font-size: 16px;
+                        text-align: justify;margin-bottom: 18px;">
+      Washington University of Science and Technology (WUST) was recognized at the Virginia state senate assembly on
+      Wednesday, January 18th, 2023.
+      Virginia’s Fairfax State Senator John Chapman Peterson praised the university, he said the university has been making
+      the best contribution to technology and skill-based higher education. State senators from 40 districts of Virginia were
+      present in the assembly. The Assembly, headed by Lieutenant Governor Winsome Earl Sears greeted Washington University of
+      Science and Technology (WUST) with big applause.
+      </p>
+      <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-12 col-sm-12 col-12">
+          <iframe width="100%" height="450" src="https://www.youtube.com/embed/4H4I0bZCP0g?si=yLaUrratt2ENYKkc"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<div class="wraper-section selectedBgColor" style="padding-bottom: 40px;">
+  <div>
+    <div class="row justify-content-center">
+      <div class="col-lg-10">
+        <img src="https://beta.wust.edu//uploads/extra_file/1714198327969CEO.jpeg" loading="lazy" class="img-fluid"
+          alt="Washington University of Science">
+        <div style="padding-top: 30px; text-align: center;">
+          <a style="
+                        border: 1px solid #2347a7;
+                        text-decoration: none;
+                        padding: 10px 28px;
+                        border-radius: 30px;
+                        margin-bottom: 10px 0px;
+                        text-transform: uppercase;
+                        color: white;
+                        background-color: #2347a7;
+                        font-size: 16px;
+                        font-weight: 600;
+                      "
+            href="https://beta.wust.edu/wust-lauded-at-virginia-state-senate-a-memorable-day-for-all">Learn
+            More</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
 
-<div class="wraper-section selectedBgColor" style="padding-bottom: 40px;">
-  <div>
-    <h3 class="common-page-section-heading">VA Pay Rates</h3>
-    <p style="
-        font-size: inherit;
-        line-height: inherit;
-        margin-bottom: 15px;
-        color: #656565;
-        text-align: justify;
-      ">
-      Interested in knowing how much you will receive from the VA while using educational benefits? Explore the <a
-        href="https://www.va.gov/education/benefit-rates/" target="_blank">VA’s Rate Tables</a> and select your
-      education benefit for information on past, current, and future pay rates.
-    </p>
-    <p style="
-        font-size: inherit;
-        line-height: inherit;
-        margin-bottom: 15px;
-        color: #656565;
-        text-align: justify;
-      ">
-      You may also use the <a href="https://www.va.gov/education/gi-bill-comparison-tool/" target="_blank">GI Bill®
-        Comparison Tool</a> to estimate the amount you will receive while attending Washington University of Science and
-      Technology.
-    </p>
-    <p style="
-        font-size: inherit;
-        line-height: inherit;
-        margin-bottom: 15px;
-        color: #656565;
-        text-align: justify;
-      ">
-      You may change your VA direct deposit <a href="https://www.va.gov/change-direct-deposit/"
-        target="_blank">information here.</a>
-    </p>
-  </div>
-</div>
+
+
 
 
 
