update all data

--- a/index.html
+++ b/index.html
@@ -9406,7 +9406,7 @@
   </div>
 
   <div class="page-blog-section-heading">
-    <h2>Not Holidays</h2>
+    <h2>Center for Student Success</h2>
   </div>
 
   <div class="row justify-content-center">
@@ -16088,6 +16088,108 @@
   </div>
   <!-- 5555 -->
 
+  <div class="row gy-4 mb-4">
+    <div class="col-lg-4 col-md-6 col-sm-12 col-12 aos-init aos-animate" data-aos="fade-up" data-aos-delay="600">
+      <div class="card shadow-sm" style="
+                border: 1px solid rgba(14, 29, 52, 0.15);
+                background: #fff;
+                position: relative;
+                border-radius: 6px;
+                height: 100%;
+              ">
+        <div class="card-img">
+          <img style="margin-bottom: 15px;  border-radius: 6px 6px 0px 0px" loading="lazy"
+            src="https://beta.wust.edu/uploads/extra_file/17181015897666international student health insurance photo.jpeg"
+            alt="Graduate Program Admissions" class="img-fluid">
+        </div>
+        <h3 style="
+                  font-weight: 700;
+                  font-size: 24px;
+                  margin-bottom: 5px;
+                  padding: 10px 20px;
+                  text-transform: capitalize;
+                  text-decoration: none;
+                  text-align: left;
+                ">
+          International Student Health Insurance
+        </h3>
+        <p style="color: #656565; padding: 0px 20px; font-size: 15px; text-align: justify;">
+          The Student Secure plan provides comprehensive health insurance coverage designed for international students
+          outside their home country at reasonable rates.
+
+
+
+
+        </p>
+        <div style="padding: 5px 0px 20px 20px; text-align: left; margin-bottom: 10px;">
+          <a style="
+                               border: 1px solid #3C78D8;
+        text-decoration: none;
+        padding: 6px 16px;
+        border-radius: 8px;
+        margin-bottom: 10px 0px;
+        color: white;
+        background-color: #3C78D8;
+        font-size: 14px;
+        font-weight: 600;
+                          " href="#"> Insurance Plans
+
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-12 col-12 aos-init aos-animate" data-aos="fade-up" data-aos-delay="600">
+      <div class="card shadow-sm" style="
+                border: 1px solid rgba(14, 29, 52, 0.15);
+                background: #fff;
+                position: relative;
+                border-radius: 6px;
+                height: 100%;
+              ">
+        <div class="card-img">
+          <img style="margin-bottom: 15px;  border-radius: 6px 6px 0px 0px" loading="lazy"
+            src="https://beta.wust.edu/uploads/extra_file/17181024993879Housing information-02.jpg"
+            alt="Graduate Program Admissions" class="img-fluid">
+        </div>
+        <h3 style="
+                  font-weight: 700;
+                  font-size: 24px;
+                  margin-bottom: 5px;
+                  padding: 10px 20px;
+                  text-transform: capitalize;
+                  text-decoration: none;
+                  text-align: left;
+                ">
+          Housing Information
+        </h3>
+        <p style="color: #656565; padding: 0px 20px; font-size: 15px; text-align: justify;">
+          Whether you are looking for a place to live in the DMV area for the first time or are on the hunt for a new
+          apartment, room to rent, or a new roommate, you can use our list of resources in your search for housing
+          accommodations.
+
+
+
+
+        </p>
+        <div style="padding: 5px 0px 20px 20px; text-align: left; margin-bottom: 10px;">
+          <a style="
+                               border: 1px solid #3C78D8;
+        text-decoration: none;
+        padding: 6px 16px;
+        border-radius: 8px;
+        margin-bottom: 10px 0px;
+        color: white;
+        background-color: #3C78D8;
+        font-size: 14px;
+        font-weight: 600;
+                          " href="#"> Housing Links
+
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
   <!-- Team card design -->
@@ -16995,18 +17097,21 @@
   </div>
 
 
-  <div class="wraper-section selectedBgColor" style="padding-top: 10px; padding-bottom: 40px;">
+  <div class="wraper-section selectedBgColor" style="padding-top: 0px; padding-bottom: 40px;">
     <div>
       <h3 class="common-page-section-heading">Virginia State Senate Recognition of WUST</h3>
       <p style="color: #656565;
                         font-size: 16px;
                         text-align: justify;margin-bottom: 18px;">
-      Washington University of Science and Technology (WUST) was recognized at the Virginia state senate assembly on
-      Wednesday, January 18th, 2023.
-      Virginia’s Fairfax State Senator John Chapman Peterson praised the university, he said the university has been making
-      the best contribution to technology and skill-based higher education. State senators from 40 districts of Virginia were
-      present in the assembly. The Assembly, headed by Lieutenant Governor Winsome Earl Sears greeted Washington University of
-      Science and Technology (WUST) with big applause.
+        Washington University of Science and Technology (WUST) was recognized at the Virginia state senate assembly on
+        Wednesday, January 18th, 2023.
+        Virginia’s Fairfax State Senator John Chapman Peterson praised the university, he said the university has been
+        making
+        the best contribution to technology and skill-based higher education. State senators from 40 districts of
+        Virginia were
+        present in the assembly. The Assembly, headed by Lieutenant Governor Winsome Earl Sears greeted Washington
+        University of
+        Science and Technology (WUST) with big applause.
       </p>
       <div class="row justify-content-center">
         <div class="col-lg-8 col-md-12 col-sm-12 col-12">
@@ -17019,14 +17124,14 @@
     </div>
   </div>
 
-<div class="wraper-section selectedBgColor" style="padding-bottom: 40px;">
-  <div>
-    <div class="row justify-content-center">
-      <div class="col-lg-10">
-        <img src="https://beta.wust.edu//uploads/extra_file/1714198327969CEO.jpeg" loading="lazy" class="img-fluid"
-          alt="Washington University of Science">
-        <div style="padding-top: 30px; text-align: center;">
-          <a style="
+  <div class="wraper-section selectedBgColor" style="padding-bottom: 40px;">
+    <div>
+      <div class="row justify-content-center">
+        <div class="col-lg-10">
+          <img src="https://beta.wust.edu//uploads/extra_file/1714198327969CEO.jpeg" loading="lazy" class="img-fluid"
+            alt="Washington University of Science">
+          <div style="padding-top: 30px; text-align: center;">
+            <a style="
                         border: 1px solid #2347a7;
                         text-decoration: none;
                         padding: 10px 28px;
@@ -17037,14 +17142,164 @@
                         background-color: #2347a7;
                         font-size: 16px;
                         font-weight: 600;
-                      "
-            href="https://beta.wust.edu/wust-lauded-at-virginia-state-senate-a-memorable-day-for-all">Learn
-            More</a>
+                      " href="https://beta.wust.edu/wust-lauded-at-virginia-state-senate-a-memorable-day-for-all">Learn
+              More</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+
+  <div class="wraper-section selectedBgColor">
+    <div class="row" style="padding-top: 40px; padding-bottom: 20px;">
+      <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+        <img style="border-radius: 5px;  box-shadow: 10px 10px 0 1px #ADD8E6;"
+          src="https://beta.wust.edu/uploads/extra_file/17256912288715Michael .webp" class="img-fluid" loading="lazy"
+          alt="Michael">
+      </div>
+      <div class="col-lg-8 col-md-8 col-sm-12 col-12">
+        <p style="
+                      font-size: 18px;
+                      text-align: justify;margin-bottom: 12px; padding-top: 10px;">
+          "Dr. Perini has been incredibly proactive in supporting and guiding students in HIS101, World History and I
+          truly admire
+          his commitment, dedication, and understanding of our students." Dr. Hyun Lee, Associate Director of General
+          Education.
+        </p>
+        <p style="
+                              font-size: 18px;
+                              text-align: justify;margin-bottom: 12px;">
+          My name is Dr. Michael Perini, and I have the privilege of being your professor this term. I have a very
+          diverse
+          background, in both the academic and professional worlds.
+        </p>
+        <p style="
+                              font-size: 18px;
+                              text-align: justify;margin-bottom: 12px;">
+          I am originally from New York and moved to Virginia in 2006. Academically, I received a Bachelor of Arts in
+          Classics and
+          History and a Master of Arts in History from the State University of New York at Buffalo. Additionally, I
+          completed the
+          requirements for the Master of Arts in Interdisciplinary Studies for Higher Education Administration at George
+          Mason
+          University and earned Doctor of Arts in Community College Education, also from Mason.
+        </p>
+        <p style="
+                              font-size: 18px;
+                              text-align: justify;margin-bottom: 12px;">
+          I have about 20 years as a manager, director, or dean in higher education and non-profit settings. I have
+          worked in
+          admissions, instruction, library circulation and reference, assessment, advising, and administration. My
+          strengths lie
+          in assessment and analysis, and I am keen at solving problems utilizing unconventional approaches afforded by
+          my diverse
+          experience. I have published a book, numerous chapters, and articles on an assortment of topics, including
+          identity
+          theory, for-profit education, the public and civic good, distance education, library management and theory,
+          student
+          engagement, and martial arts theory.
+        </p>
+
+      </div>
+    </div>
+  </div>
+
+
+  <div class="wraper-section" style="padding-bottom: 30px">
+    <p style="
+                                font-size: 18px;
+                                text-align: justify;margin-bottom: 12px; padding-top: 10px;">
+      At the University at Buffalo, I acted as the Head Instructor of the university’s intercollegiate Taekwondo team.
+      Also a
+      Brazilian Jiu-Jitsu competitor, I have acquired numerous titles and championships through active competition in a
+      variety of regional, national, and international striking and grappling events. I currently hold the Kukkiwon
+      Certified
+      rank of 5th degree black belt.
+    </p>
+    <p style="
+                                font-size: 18px;
+                                text-align: justify;margin-bottom: 12px; padding-top: 10px;">
+      Lastly, I am a soldier. I currently am a staff officer in charge of training of all troops in VA. Serving brings
+      me a
+      great deal of satisfaction. My family and I reside in Springfield, VA.
+    </p>
+    <p style="
+                                font-size: 18px;
+                                text-align: justify;margin-bottom: 12px; padding-top: 10px;">
+      Specific to this course, I enjoy history and its discussion because it facilitates an understanding of time and
+      self.
+      One may find corollaries in history to experiences and events that currently impact your daily lives. I am not
+      interested in your ability to regurgitate facts or dates. I want you to think about people and events and imagine
+      yourself in such time and place. Imagine the experience and relate it to yourself. Do that, and you will do well
+      in this
+      course!
+    </p>
+    <p style="
+                                                        font-size: 18px;
+                                                        line-height: inherit;
+                                                        margin-top: 3px;
+                                                        margin-bottom: 1px;
+                                                      ">
+      <span style="font-weight: 700">Dr. Michael Perini</span>
+    </p>
+    <p style="
+                                                        font-size: 18px;
+                                                        line-height: inherit;
+                                                        margin-top: 0px;
+                                                        color: #656565;
+                                                        margin-bottom: 6px;
+                                                      ">
+      <span style="color: #2347a7; font-weight: 600"> <a
+          href="mailto:michael.perini@wust.edu">michael.perini@wust.edu</a>
+      </span>
+    </p>
+  </div>
+
+
+
+  <div class="wraper-section selectedBgColor" style="padding-bottom: 20px; padding-top: 30px;">
+    <div>
+      <h3 class="common-page-section-heading">Our Pledge</h3>
+      <p>
+        The Center for Student Success (CSS) is here to provide every WUST student with the personalized support they
+        need
+        to succeed from the day they enroll to the day they graduate. Our philosophy is that each student should feel
+        lovable, trainable, and cared for. With a collection of services dedicated to promoting academic excellence, we
+        assist students in developing the skills and strategies needed to achieve their academic and personal goals.
+      </p>
+    </div>
+  </div>
+
+
+  <div class="wraper-section selectedBgColor"
+    style="background-color: #C9DAF8; padding-left: 10px; padding-top: 10px; padding-bottom: 0px; margin-bottom: 50px;">
+    <p style="
+                                      font-size: 18px;
+                                      line-height: inherit;
+                                      margin-top: 10px;
+                                      color: #656565;
+                                      padding-left: 15px;
+                                      margin-bottom: 0px;
+                                    ">
+      <span style="color: #2347a7; font-weight: 600"><a target="_blank" href="https://www.facebook.com/groups/IGlobalISA/">International Student Association Student Leaders:</a></span>
+    </p>
+    <p style="
+                                                            font-size: 16px;
+                                                            line-height: inherit;
+                                                            margin-top: 3px;
+                                                            padding-left: 15px;
+                                                            margin-bottom: 13px;
+                                                          ">
+      <span style="font-weight: 600">Email: <a href="mailto:isa@wust.edu">isa@wust.edu</a></span>
+    </p>
+    <p class="" style="padding-left: 15px;"><b>President, Amit Gupta</b><br>Country of Origin: India</p>
+    <p class="" style="padding-left: 15px;"><b>Vice President, Olajide Daniel Oluleye</b><br><b>Country of Origin:</b>
+      Nigeria</p>
+    <p class="" style="padding-left: 15px; padding-bottom: 15px;"><b>Secretary, Tejaswi Datta</b><br><b>Country of
+        Origin:</b> Nepal<br></p>
+  </div>
+
+
 
 
 
